feat: get property list
- New metadata middleware that contains 2 functions:
checkSubjectExists() and checkSubjectNotExists()
- Jest globalSetup that setup mogodb and express server before all test
suites
- Jest globalTeardown that stops mogodb and closes express server after
all test suites
