# src/server/services/database.ts
@@ -7,7 +7,6 @@ import { DATABASE_COLLECTIONS } from '../utils/constants';
 export interface DatabaseService {
   getObject(filters: Record<string, unknown>): Promise<Document | null>;
   insertObject(object: Record<string, unknown>): Promise<string>;
-  ensureExists(filters: Record<string, unknown>, expectedExists: boolean): Promise<Document | null>;
 }
 
 const configure = (logger: Logger, database: Db): DatabaseService => ({
@@ -33,33 +32,6 @@ const configure = (logger: Logger, database: Db): DatabaseService => ({
       logger.log.error(`[Services][insertObject] Could not insert object. Error: ${error}`);
       throw ErrorFactory.databaseError(`Could not insert object. Error: ${error}`);
     }
-  },
-
-  ensureExists: async (filters, expectedExists: boolean) => {
-    logger.log.info('[Services][ensureExists] Getting object from db');
-    let object: Document | null;
-    try {
-      object = await database.collection(DATABASE_COLLECTIONS.METADATA).findOne(filters);
-      logger.log.info('[Services][ensureExists] Object retrieved');
-    } catch (error) {
-      logger.log.error(`[Services][ensureExists] Could not retrieve object. Error: ${error}`);
-      throw ErrorFactory.databaseError(`Could not retrieve object. Error: ${error}`);
-    }
-    if (object && !expectedExists) {
-      logger.log.error(
-        `[Services][ensureExists] Metadata object with subject ${filters.subject} already exists`
-      );
-      throw ErrorFactory.subjectExistsError('A metadata object with that subject already exists');
-    }
-    if (!object && expectedExists) {
-      logger.log.error(
-        `[Services][ensureExists] Metadata object with subject ${filters.subject} does not exists`
-      );
-      throw ErrorFactory.subjectNotFoundError(
-        'A metadata object with that subject does not exists'
-      );
-    }
-    return object;
   },
 });
 
